Add progress status hint
Problem:
The user gets no feedback during request processing.

Solution:
Add a small hint to the status bar.

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -32,8 +32,8 @@
         </section>
         <div class="status-bar">
             <p class="status-bar-field">Pict Version: 3.7.4</p>
-            <p class="status-bar-field">Slide 1</p>
             <p class="status-bar-field">CPU Usage: 14%</p>
+            <p class="status-bar-field" id="progress-status"></p>
         </div>
     </div>
 </div>
