Add test case amount to status bar
Problem:
We want to be able to see how many test cases were generated.

Solution:
Add test case count to status bar.

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -32,7 +32,7 @@
         </section>
         <div class="status-bar">
             <p class="status-bar-field">Pict Version: 3.7.4</p>
-            <p class="status-bar-field">CPU Usage: 14%</p>
+            <p class="status-bar-field" id="test-amount"></p>
             <p class="status-bar-field" id="progress-status"></p>
         </div>
     </div>
