--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -57,7 +57,7 @@
 
 <div class="window notepad-window hidden imprint-window" id="imprint-window">
     <div class="title-bar">
-        <div class="title-bar-text">Impressum.txt</div>
+        <div class="title-bar-text">Impressum</div>
         <div class="title-bar-controls">
             <button aria-label="Minimize" id="imprint-min-button"></button>
             <button aria-label="Maximize" id="imprint-max-button"></button>
@@ -67,8 +67,18 @@
     <div class="window-body">
         <section class="field-row-stacked">
             <div class="field-row-stacked">
-                <label for="imprint-text">Impressum</label>
-                <textarea id="imprint-text" rows="50">Impressum</textarea>
+                <h1>Impressum</h1>
+
+                <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+                <span class="address"></span>
+
+                <h2>Kontakt</h2>
+                <span class="contact"></span>
+
+                <h2>Redaktionell verantwortlich</h2>
+                <span class="address"></span>
+
+                <p>Quelle: <a href="https://www.e-recht24.de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a></p>
             </div>
         </section>
     </div>
