Add hint about relation to third parties
Problem:
We are using Microsoft PICT, but we are not related to Microsoft. We
want to make a clear statement about this fact.

Solution:
Add legal hint about Microsoft relation and about the Windows 98 design
sources.

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -79,6 +79,13 @@
                 <span class="address"></span>
 
                 <p>Quelle: <a href="https://www.e-recht24.de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a></p>
+
+                <h2>Hinweis</h2>
+
+                <p>Diese Website steht in keiner Beziehung zu Microsoft. Sie stellt lediglich eine Weboberfläche zur Nutzung des von Microsoft unter der MIT-Lizenz veröffentlichten Programms "<a href="https://github.com/microsoft/pict">Microsoft PICT</a>" zur Verfügung.</p>
+                <p>Die Website ist ein privates "Spielprojekt" ohne kommerzielles Interesse.</p>
+                <p>Das Design nutzt <a href="https://jdan.github.io/98.css/">98.css</a> sowie Tipps und Ressourcen aus dem Blogartikel auf Fjolt: <a href="https://fjolt.com/article/css-windows-98">Using Only CSS to Recreate Windows 98</a>.</p>
+                <p>Alle genannten Marken sind Eigentum der jeweiligen Inhaber.</p>
             </div>
         </section>
     </div>
