Add new favicon and icon attribution
Problem:
The current used favicon references old windows version, but our
website is not about windows but about testing.

Solution:
Add a new favicon which better reflects the testing purpose.

Add attribution to follow the  Flaticon license guidelines.

Potion icons created by Icongeek26 - Flaticon
https://www.flaticon.com/free-icons/potion

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head style="height: 100%;">
     <meta charset="UTF-8">
-    <title>PICT</title>
+    <title>pairwise98</title>
     <link rel="stylesheet" href="css/98.css">
     <link rel="stylesheet" href="css/win98.css">
     <link rel="stylesheet" href="css/main.css">
+
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="96x96">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png">
 </head>
 <body>
 
@@ -86,6 +90,7 @@
                 <p>Die Website ist ein privates "Spielprojekt" ohne kommerzielles Interesse.</p>
                 <p>Das Design nutzt <a href="https://jdan.github.io/98.css/">98.css</a> sowie Tipps und Ressourcen aus dem Blogartikel auf Fjolt: <a href="https://fjolt.com/article/css-windows-98">Using Only CSS to Recreate Windows 98</a>.</p>
                 <p>Alle genannten Marken sind Eigentum der jeweiligen Inhaber.</p>
+                <p><a href="https://www.flaticon.com/free-icons/potion" title="potion icons">Potion icons created by Icongeek26 - Flaticon</a></p>
             </div>
         </section>
     </div>
