--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -86,11 +86,10 @@
 
                 <h2>Hinweis</h2>
 
-                <p>Diese Website steht in keiner Beziehung zu Microsoft. Sie stellt lediglich eine Weboberfläche zur Nutzung des von Microsoft unter der MIT-Lizenz veröffentlichten Programms "<a href="https://github.com/microsoft/pict">Microsoft PICT</a>" zur Verfügung.</p>
+                <p>Diese Website steht in keiner Beziehung zu Microsoft. Sie stellt lediglich eine Weboberfläche zur Nutzung des von Microsoft unter der MIT-Lizenz veröffentlichten Programms "<a href="https://github.com/microsoft/pict">Microsoft PICT</a>" zur Verfügung. Alle genannten Marken sind Eigentum der jeweiligen Inhaber.</p>
                 <p>Die Website ist ein privates "Spielprojekt" ohne kommerzielles Interesse.</p>
-                <p>Das Design nutzt <a href="https://jdan.github.io/98.css/">98.css</a> sowie Tipps und Ressourcen aus dem Blogartikel auf Fjolt: <a href="https://fjolt.com/article/css-windows-98">Using Only CSS to Recreate Windows 98</a>.</p>
-                <p>Alle genannten Marken sind Eigentum der jeweiligen Inhaber.</p>
-                <p><a href="https://www.flaticon.com/free-icons/potion" title="potion icons">Potion icons created by Icongeek26 - Flaticon</a></p>
+                <p>Das Design nutzt <a href="https://jdan.github.io/98.css/">98.css</a> sowie Tipps und Ressourcen aus dem Blogartikel auf Fjolt: <a href="https://fjolt.com/article/css-windows-98">Using Only CSS to Recreate Windows 98</a>. <a href="https://www.flaticon.com/free-icons/potion" title="potion icons">Potion icons created by Icongeek26 - Flaticon</a></p>
+                <p>Source on GitHub: <a href="https://github.com/renfis/pict">https://github.com/renfis/pict</a></p>
             </div>
         </section>
     </div>
